# PoC-final-project

./: .env  .env.example  .gitignore  BENCHMARKING.md  CLEANUP_SUMMARY.md  DEMO_GUIDE.md  DEPLOY_TESTNET.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  FORK_TESTING.md  FUTURE_GROWTH_OPPORTUNITIES.md  GET_TESTNET_TOKENS.md  GROTH16_PROVING_GUIDE.md  HOW_IT_WORKS.md  HOW_TO_USE.md  MULTI_USER_TESTING.md  ONE_PAGER.md  PITCH_DECK_OUTLINE.md  POC_IMPLEMENTATION.md  PRIVACY_PROOF.md  PRIVATE_TRANSFERS.md  PRODUCTION_READINESS.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  PROGRESS.md  PROJECT_STATUS.md  README.md  REAL_ZK_PROOFS.md  RELAYER_FEATURE.md  TESTING_GUIDE.md  TESTING_WITHOUT_DOCKER.md  TESTNET_DEPLOYMENT.md  TESTNET_DEPLOYMENT_SUCCESS.md  TEST_RESULTS.md  benchmark.sh  blueprint.md  cleanup-and-push.sh  compare-systems.sh  demo.sh  deploy-testnet.sh  deploy-with-relayer.sh  (+13 more)
contracts/: .env.contracts  remappings.txt
contracts/broadcast/Deploy.s.sol/31337/: run-1763723180910.json  run-1763723938174.json  run-1763724339773.json  run-1763724392251.json  run-1763883263051.json  run-latest.json
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol
contracts/src/: AegisVault.sol  MockTokens.sol  TraditionalVault.sol  WrappedMNT.sol
contracts/test/: AegisVault.t.sol
docs/: aegis-architecture.md  aegis-sp1-poc.md
script/: Cargo.toml  build.rs  transfer-groth16.proof
script/src/: integration.rs  main.rs
zk-program/: Cargo.toml
zk-program/src/: crypto.rs  main.rs  transfer.rs  types.rs
(+4 files in other folders)
