[package]
name = "zk-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2e"
path = "src/bin/e2e.rs"

[[bin]]
name = "generate_proof"
path = "src/bin/generate_proof.rs"

[[bin]]
name = "test_transfer"
path = "src/bin/test_transfer.rs"

[dependencies]
sp1-sdk = "5.2.2"
serde = { version = "1.0", features = ["derive"] }
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
dotenvy = "0.15"

[build-dependencies]
sp1-build = "5.2.2"
